crystal-facet-uml (1.65.5) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * when searching for relationships, less possibly wrong assumptions on model

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 13 Sep 2025 09:30:00 +0200

crystal-facet-uml (1.65.4) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * in debug mode, no assertion if searching without open database
  * no overlength string warnings, all strings are below 4096 bytes
  * compile flag -Woverlength-strings removed
  * some icons of classifier types beautified

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 13 Sep 2025 09:30:00 +0200

crystal-facet-uml (1.65.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * icons of edit buttons beautified
  * html user documentation is single-paged
  * search pages show only diagrams that contain the visible results

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 31 Aug 2025 09:00:00 +0200

crystal-facet-uml (1.65.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * desktop file renamed and dbus app-name adapted to arrows2boxes.de domain

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 23 Aug 2025 08:00:00 +0200

crystal-facet-uml (1.65.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * in search results, no empty page after the last page
  * in search results, performance optimized by not reading database records
    when the result buffer is already full

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 12 Aug 2025 06:00:00 +0200

crystal-facet-uml (1.65.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * No compiler warnings on no-overlength-strings, except test code
  * page up/down buttons in search results

 -- Andreas Warnke <cfu@andreaswarnke.de>  Fri, 08 Aug 2025 08:00:00 +0200

crystal-facet-uml (1.64.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * When clicking, an arrow is shown to indicate that dragging is possible
  * when dragging or creating, the grid indicator is a solid line when snapped